[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "palabras"
authors = [{name = "Paavo Pere", email = "paavo@pere.fi"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "types-requests",
]


[project.urls]
Home = "https://github.com/paavopere/palabras"
