[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "palabras"
authors = [{name = "Paavo Pere", email = "paavo@pere.fi"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "types-requests",
    "flake8",
]


[project.urls]
Home = "https://github.com/paavopere/palabras"


# tox can be used locally
# there is also a GitHub workflow in .github/workflows/test.yml that runs similar commands
# ... would be nice to manage both in one place
[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38

[testenv]
deps = -e .[test]
commands = pytest --cov --cov-report=term-missing
           mypy palabras --ignore-missing-imports
           flake8
"""
